<resources>
    <string name="app_name">Daily Quote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="daily_words">Daily words that inspire your life.</string>
    <string name="initializing_wisdom">INITIALIZING WISDOM</string>
    <string name="discover_quotes">Discover Inspirational Quotes</string>
    <string name="onboarding_description">Find daily inspiration and meaningful quotes to brighten your day.</string>
    <string name="get_started">Get Started</string>
    <string name="quote_example">The only way to do great work is to love what you do.</string>
    <string name="quote_of_the_day">Quote of the Day</string>
    <string name="author_example">steve jobs</string>
    <string name="share">Share</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="error">Something went wrong! Please try again</string>
    <string name="wisdom">Wisdom</string>
    <string name="quote_saved_successfully">Quote saved successfully</string>
</resources>