<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg"
    tools:context=".presentation.splash.SplashFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/logoContainer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/card_stroke"
        app:strokeWidth="2dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@drawable/ic_quote" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/appName"
        style="@style/TopBarTitle"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/appDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoContainer" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/daily_words"
        android:textColor="@color/description_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-80dp"
        app:layout_constraintBottom_toTopOf="@+id/initializingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_rawRes="@raw/progress_bar_gradient" />

    <TextView
        android:id="@+id/initializingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/initializing_wisdom"
        android:textColor="@color/splash_initializing_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>